--- a/dragon-ball.yml
+++ b/dragon-ball.yml
@@ -1,3 +1,3 @@
 application:
   name:
-    Default configuration - WITH NEW CHANGES!
+    Default configuration - WITH NEW CHANGES! 222222222222222222222
